fixed stretched out images

--- a/style.css
+++ b/style.css
@@ -198,8 +198,8 @@ main div.default p {
 }
 
 .title img {
-  height: 100vh;
-  width: 100vw;
+  width: 100%;
+  height: auto;
   object-fit: cover;
 }
 
@@ -211,7 +211,7 @@ main div:nth-of-type(2) {
   height: 35vh;
 }
 
-.image img, main div:nth-of-type(2) img, main div:nth-of-type(2) p img  {
+.image img, main div:nth-of-type(2) img, main div:nth-of-type(2) p img {
   width: 100%
   height: auto;
 }
@@ -669,6 +669,7 @@ button, input[type=button], input[type=submit], input[type=reset] {
 
 .home-page main li:first-child .hero img {
   height: 100%;
+  width: auto;
 }
 
 .home-page main li:first-child .topic {
@@ -763,6 +764,7 @@ button, input[type=button], input[type=submit], input[type=reset] {
 
   main div:nth-of-type(2) {
     width: 100%
+    height: auto;
   }
 
   main {
